--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+spring.datasource.username=springuser
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.initialization-mode=always
+spring.datasource.schema=classpath:database/schema.sql
+spring.datasource.data=classpath:database/data.sql
+spring.datasource.sql-script-encoding=utf-8
 
