--- a/pom.xml
+++ b/pom.xml
@@ -48,11 +48,22 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
+    
     <dependency>
         <groupId>com.h2database</groupId>
         <artifactId>h2</artifactId>
         <scope>runtime</scope>
     </dependency>
+    
+    <dependency>
+<groupId>javax.validation</groupId>
+<artifactId>validation-api</artifactId>
+</dependency>
+
+ <dependency>
+  <groupId>org.springframework.boot</groupId>
+  <artifactId>spring-boot-starter-validation</artifactId>
+</dependency>	
     
 		
 	</dependencies>
