--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 <dependency>
   <groupId>mysql</groupId>
   <artifactId>mysql-connector-java</artifactId>
-  <version>8.0.29</version>
+  <version>8.0.29</version><!--$NO-MVN-MAN-VER$-->
   <scope>runtime</scope>
 </dependency>
 
@@ -58,13 +58,8 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
-    <dependency>
-        <groupId>com.h2database</groupId>
-        <artifactId>h2</artifactId>
-        <scope>runtime</scope>
-    </dependency>
     
-		<dependency>
+ <dependency>
   <groupId>org.springframework.boot</groupId>
   <artifactId>spring-boot-starter-jdbc</artifactId>
 </dependency>
